[gd_scene load_steps=5 format=2]

[ext_resource path="res://Utilities/CustomButton.gd" type="Script" id=1]
[ext_resource path="res://Sound Effects/Ok.wav" type="AudioStream" id=2]
[ext_resource path="res://Sound Effects/Select.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Pressed"
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="CustomButton" type="Button"]
margin_right = 32.0
margin_bottom = 13.0
rect_min_size = Vector2( 32, 13 )
rect_pivot_offset = Vector2( 16, 6 )
text = "Test"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pressed = SubResource( 1 )

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
pitch_scale = 0.8

[node name="PressedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
pitch_scale = 0.8
[connection signal="mouse_entered" from="." to="." method="_on_CustomButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_CustomButton_pressed"]
